[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/bullet_but_poop.png" type="Texture" id=1]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.9478, 11.1783 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.00581396, 0.481818 ), 0.0, 0.591646, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.194631, 0.489933, 0.872483, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.884047, 0.530573, 0.0843294, 1, 0.91889, 0.62096, 0.0601675, 1, 0.984594, 0.791406, 0.0146051, 1, 1, 0.831373, 0.00392157, 1 )

[node name="bullet" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
disabled = true

[node name="bullet_but_poop" type="Sprite" parent="."]
modulate = Color( 1.2, 1.2, 1.1, 1 )
position = Vector2( 1.37134, 2.18831 )
scale = Vector2( 3.54773, 2.71083 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4.09209, 2.85231 )
shape = SubResource( 1 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 7.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1.3, 1, 1, 1 )
position = Vector2( -28.6868, -0.140308 )
amount = 25
lifetime = 0.5
explosiveness = 0.05
randomness = 0.28
emission_shape = 2
emission_rect_extents = Vector2( 1, 4 )
direction = Vector2( -1, 0 )
spread = 52.74
gravity = Vector2( -20, 0 )
initial_velocity = 38.71
scale_amount = 3.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="destroy_timer" to="." method="_on_destroy_timer_timeout"]
